# Panopticon

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  docs.yml
docs/extending/: book.toml
docs/extending/book/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-8b684716.js  toc-f149ad64.js  toc.html
docs/extending/book/advanced-patterns/: derived-results.html  error-handling.html  index.html  type-indexed-extensions.html
docs/extending/book/architecture/: index.html
docs/extending/book/execution-context/: index.html
docs/extending/book/first-command/: defining-schema.html  implementing-traits.html  index.html  testing-command.html
docs/extending/book/services/: event-hooks.html  hook-events.html  index.html  pipeline-io.html
docs/extending/book/spec-system/: index.html  literal-field-ref.html  name-policy.html  object-fields.html  reference-kinds.html  result-specs.html  type-defs.html
docs/extending/guide/src/: introduction.html  introduction.md
docs/extending/src/: SUMMARY.md  introduction.md
docs/extending/src/advanced-patterns/: composite-commands.md  derived-results.md  error-handling.md  index.md  type-indexed-extensions.md
docs/extending/src/architecture/: index.md
docs/extending/src/execution-context/: index.md
docs/extending/src/first-command/: defining-schema.md  implementing-traits.md  index.md  testing-command.md
docs/extending/src/services/: event-hooks.md  hook-events.md  index.md  pipeline-io.md
docs/extending/src/spec-system/: index.md  literal-field-ref.md  name-policy.md  object-fields.md  reference-kinds.md  result-specs.md  type-defs.md
docs/guide/: book.toml
docs/guide/book/: 404.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-743fd2df.js  toc-eb8c475d.js  toc.html
docs/guide/book/commands/: aggregate-command.html  condition-command.html  file-command.html  index.html  sql-command.html  template-command.html
docs/guide/book/core-concepts/: commands-and-attributes.html  data-stores.html  index.html  namespaces.html  pipeline-state-machine.html
docs/guide/book/getting-started/: index.html
docs/guide/book/pipeline-patterns/: conditional-execution.html  index.html  iteration.html  pipeline-editing.html  result-access.html
docs/guide/book/services-and-io/: index.html
docs/guide/book/working-with-data/: index.html  polars-dataframes.html  store-paths.html  tera-templating.html
docs/guide/extending/src/: introduction.html  introduction.md
docs/guide/src/: SUMMARY.md  introduction.md
docs/guide/src/commands/: aggregate-command.md  condition-command.md  file-command.md  index.md  sql-command.md  (+1 more)
examples/: README.md  aggregate_and_export.rs  generate_fixtures.rs  iterate_object_keys.rs  iterative_tracing.rs  multi_format_load.rs  pipeline_overview.rs  pipeline_reuse.rs  template_inheritance.rs  when_conditional.rs
examples/extend/: command_spec_safety.rs  custom_command.rs
examples/prelude/: aggregate_and_export.rs  iterate_object_keys.rs  multi_format_load.rs  pipeline_reuse.rs  template_inheritance.rs  when_conditional.rs
fixtures/: events.json  metrics.parquet  products.csv
fixtures/tera/: base.tera  header.tera  page.tera
src/: lib.rs  tera.pest  traits.rs  types.rs  utils.rs
src/commands/: aggregate.rs  condition.rs  file.rs  mod.rs  sql.rs  template.rs
src/dependencies/: helpers.rs  parser.rs
src/execution/: commands.rs  context.rs  dependencies.rs  mod.rs  namespace.rs  order.rs
src/extensions/: mod.rs
src/namespace/: iterative.rs  mod.rs  tests.rs
src/pipeline/: completed.rs  draft.rs  mod.rs  order.rs  ready.rs  results.rs  traits.rs  validation.rs
src/services/: hook_events.rs  io.rs  mod.rs
src/services/event_hooks/: debug.rs
src/spec/: attribute.rs  builder.rs  command.rs  mod.rs  result.rs
src/values/: context.rs  helpers.rs  mod.rs  scalar.rs  tabular.rs
(+16 files in other folders)
