[package]
name = "panopticon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
pest = "2.8.5"
pest_derive = "2.8.5"
polars = { version = "0.52.0", features = ["sql", "parquet", "polars-io", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
tera = "1.20.1"
tokio = { version = "1.49.0", features = ["macros", "rt", "rt-multi-thread", "sync", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[build-dependencies]
ureq = "2.10"
