[package]
name = "panopticon-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
description = "An extensible data processing and templating engine."
repository = "https://github.com/dolly-parseton/panopticon"
readme = "README.md"
authors = ["dolly-parseton"]
keywords = ["pipeline", "data-processing", "templating", "etl", "polars"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
pest = "2.8.5"
pest_derive = "2.8.5"
regex = "1"
polars = { version = "0.52.0", features = [
    "sql",
    "lazy",
    "parquet",
    "polars-io",
    "json",
] }
serde = { version = "1.0.228", features = ["derive"] }
tera = "1.20.1"
tokio = { version = "1.49.0", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "fs",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
ureq = "2.10"

# ─── Prelude examples (using panopticon features) ───

[[example]]
name = "multi_format_load"
path = "examples/prelude/multi_format_load.rs"

[[example]]
name = "when_conditional"
path = "examples/prelude/when_conditional.rs"

[[example]]
name = "template_inheritance"
path = "examples/prelude/template_inheritance.rs"

[[example]]
name = "iterate_object_keys"
path = "examples/prelude/iterate_object_keys.rs"

[[example]]
name = "pipeline_reuse"
path = "examples/prelude/pipeline_reuse.rs"

[[example]]
name = "aggregate_and_export"
path = "examples/prelude/aggregate_and_export.rs"

# ─── Extend examples (building custom commands) ───

[[example]]
name = "custom_command"
path = "examples/extend/custom_command.rs"

[[example]]
name = "command_spec_safety"
path = "examples/extend/command_spec_safety.rs"
